BPMS-357 - fix integration test failures in CI matrix (wildfly+webapps+alldb)